--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "*.ino": "cpp"
     },
     "particle.targetPlatform": "argon",
-    "particle.firmwareVersion": "3.0.0"
+    "particle.firmwareVersion": "3.0.0",
+    "particle.targetDevice": "KUMVA011"
 }
