--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,5 @@
         "*.ino": "cpp"
     },
     "particle.targetPlatform": "argon",
-    "particle.firmwareVersion": "3.0.0",
-    "particle.targetDevice": "KUMVA011"
+    "particle.firmwareVersion": "3.0.0"
 }
